--- a/numerki/CMakeLists.txt
+++ b/numerki/CMakeLists.txt
@@ -4,4 +4,4 @@ project(numerki)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(numerki
-        numerki_zad1.cpp functions.cpp functions.h)
+        numerki_zad1.cpp functions.cpp functions.h gnuplot.h)
